Refactoring: move tx/rx functions

--- a/signalinsamling/CMakeLists.txt
+++ b/signalinsamling/CMakeLists.txt
@@ -54,7 +54,7 @@ include_directories(
 link_directories(${Boost_LIBRARY_DIRS})
 
 ### Make the executable #######################################################
-add_executable(main main.cpp)
+add_executable(main main.cpp util.cpp)
 
 SET(CMAKE_BUILD_TYPE "Release")
 MESSAGE(STATUS "******************************************************************************")
